<resources>
    <string name="app_name">Please give 12</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
